# Base64ConverUI

./: .gitignore  CMakeLists.txt  nextStep.txt  vcpkg.json
.github/workflows/: build.yml
src/: Base64ConverUI.cpp  Base64ConverUI.h  main.cpp
